added settings button if camera is disabled

--- a/WeScan/de.lproj/Localizable.strings
+++ b/WeScan/de.lproj/Localizable.strings
@@ -22,3 +22,5 @@
 "wescan.scanning.cancel" = "Abbrechen";
 "wescan.scanning.auto" = "Auto";
 "wescan.scanning.manual" = "Manuell";
+
+"wescan.scanning.enable_camera" = "Kamerazugriff aktivieren";
